--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,3 +1,4 @@
+@import "variables";
 @import "fontawesome-iconpicker";
-@import "matrix-bootstrap.min";
+@import "matrix-bootstrap";
 @import "bct"
