fix wysiwyg min width in read only mode in admin as well

--- a/src/css/bct.scss
+++ b/src/css/bct.scss
@@ -84,7 +84,8 @@
   color: inherit;
 }
 
-.bct-wysiwyg .with-viper {
+.bct-wysiwyg .with-viper,
+.bct-wysiwyg .sq-wysiwyg-preview-wrapper {
   min-width: 100px;
 }
 
